# NoobRL

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Ideas.md  Makefile  Readme.md  actions.py  color.py  constants.py  debug.py  demo.yml  dice.py  enchantment_data.py  engine.py  entity.py  entity_factories.py  equipment_types.py  exceptions.py  game_map.py  input_handlers.py  location.py  main.py  managers.py  message_log.py  options.py  procgen.py  pyproject.toml  recorder.py  render_functions.py  render_order.py  setup_game.py  sound_travel.py  sounds.py  tile_types.py  tilesets.py
.github/workflows/: pylint.yml
components/: ai.py  base_component.py  consumable.py  effect.py  equipment.py  equippable.py  fighter.py  inventory.py  level.py
data/: enchantments.json  enemy_table.json  items.json  loot_table.json  monsters.json  potion_colors.txt  potion_looks.txt  scroll_colors.txt  scroll_names.txt  sfx.json  sound_travel.json  tiles.json
handlers/: __init__.py  gameplay.py  interaction.py  inventory.py  keys.py  screens.py  targeting.py
sfx/: explosion-with-debris.flac
tests/: conftest.py  test_components.py  test_data_files.py  test_dice.py  test_imports.py  test_location.py
tools/: balance_report.py  sim-weapon-armor.py
