[project]
name = "noobrl"
version = "0.1.0"
description = "Traditional turn-based roguelike dungeon crawler"
readme = "Readme.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pygame",
  "tcod",
]

[dependency-groups]
dev = [
  "pytest",
  "pylint",
]

[tool.pylint.main]
py-version = "3.10"
ignore-patterns = ["^tests/.*$"]

[tool.pylint."messages control"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
]
